feat: In-Memory DB migration, FUT cards, and MVP logic fixes